# simpledb

./: Cargo.toml  README.md
src/: lib.rs  main.rs  store.rs
src/store/: mod.rs
